# ufo

./: .clang-format-ignore  .clang-tidy  CMakeLists.txt
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  cpp-linter.yml
cmake/: ufo-config.cmake.in
lib/cloud/include/ufo/cloud/: cloud.hpp  point_cloud.hpp  ufo.hpp
lib/cloud/tests/: CMakeLists.txt
lib/compute/: CMakeLists.txt
lib/compute/include/ufo/compute/: compute.hpp
lib/compute/tests/: CMakeLists.txt  compute_test.cpp
lib/container/include/ufo/container/tree/: coord.hpp  data.hpp
lib/container/tests/: CMakeLists.txt
lib/core/tests/: CMakeLists.txt
lib/execution/: CMakeLists.txt
lib/execution/tests/: CMakeLists.txt
lib/geometry/tests/: CMakeLists.txt
lib/map/: CMakeLists.txt
lib/map/1stparty/: CMakeLists.txt
lib/map/1stparty/cloud/: cloud.cmake
lib/map/1stparty/compression/: compression.cmake
lib/map/1stparty/compute/: compute.cmake
lib/map/1stparty/core/: core.cmake
lib/map/1stparty/geometry/: geometry.cmake
lib/map/1stparty/morton/: morton.cmake
lib/map/1stparty/pcl/: pcl.cmake
lib/map/1stparty/time/: time.cmake
lib/map/1stparty/utility/: utility.cmake
lib/map/1stparty/vision/: vision.cmake
lib/map/cmake/: ufomapConfig.cmake.in
lib/map/include/ufo/map/: map_full.hpp  type.hpp  types_old.hpp  ufomap.hpp  utility.hpp
lib/map/include/ufo/map/color/: block.hpp  map.hpp
lib/map/include/ufo/map/color/predicate/: color_map.hpp
lib/map/include/ufo/map/cost/: map.hpp
lib/map/include/ufo/map/count/: count_map.hpp
lib/map/include/ufo/map/count/predicate/: count_map.hpp
lib/map/include/ufo/map/distance/: block.hpp  map.hpp
lib/map/include/ufo/map/integrator/: integrator.hpp  integrator_old.hpp  inverse_integrator.hpp  old_integrator.hpp  simple_integrator.hpp  simple_integrator_2d copy.hpp  simple_integrator_2d.hpp  simple_integrator_3d.hpp
lib/map/include/ufo/map/integrator/detail/: bool_grid.hpp  count_grid.hpp  grid_map.hpp  hit.hpp  miss.hpp
lib/map/include/ufo/map/integrator/detail/inverse/: block.hpp  cloud_element.hpp  info.hpp  info_and_lut.hpp  map.hpp  misses_info.hpp  predicate.hpp
lib/map/include/ufo/map/integrator/detail/inverse/predicate/: inverse.hpp
lib/map/include/ufo/map/intensity/: intensity_map.hpp
lib/map/include/ufo/map/intensity/predicate/: intensity_map.hpp
lib/map/include/ufo/map/label/: block.hpp  label_map.hpp  map.hpp  predicate.hpp
lib/map/include/ufo/map/label/predicate/: label_map.hpp
lib/map/include/ufo/map/labels/: map.hpp
lib/map/include/ufo/map/modified/: block.hpp  map.hpp  predicate.hpp
lib/map/include/ufo/map/modified/predicate/: modified.hpp
lib/map/include/ufo/map/occupancy/: block.hpp  map.hpp
lib/map/include/ufo/map/occupancy/predicate/: contains_occupancy_state.hpp  contains_occupancy_states.hpp  occupancy.hpp  occupancy_interval.hpp  occupancy_map.hpp  occupancy_state.hpp  occupancy_states.hpp
lib/map/include/ufo/map/reflection/: reflection_map.hpp
lib/map/include/ufo/map/reflection/predicate/: reflection_map.hpp
lib/map/include/ufo/map/seen_empty/: seen_empty_map.hpp  seen_empty_predicate.hpp  seen_empty_propagation_criteria.hpp
lib/map/include/ufo/map/seen_empty/predicate/: seen_empty.hpp  seen_empty_map.hpp
lib/map/include/ufo/map/semantic/: semantic_map.hpp  semantic_predicate.hpp
lib/map/include/ufo/map/semantic_set/: semantic_set_map.hpp  semantic_set_predicate.hpp
lib/map/include/ufo/map/surfel/: surfel_map.hpp  surfel_predicate.hpp
lib/map/include/ufo/map/time/: time_map.hpp
lib/map/include/ufo/map/time/predicate/: time_map.hpp
lib/map/include/ufo/map/tree/: block.hpp  file_header.hpp  map.hpp  map_block.hpp  map_utility.hpp  tree.hpp  type_traits.hpp
lib/map/include/ufo/map/void_region/: block.hpp  map.hpp
lib/map/include/ufo/map/void_region/predicate/: void_region.hpp
lib/map/src/: render.cpp  render2d.cpp  render4d.cpp
lib/map/tests/: CMakeLists.txt  label_map_test.cpp  map_test.cpp  occupancy_map_test.cpp
lib/math/include/ufo/math/: math.hpp
lib/math/include/ufo/math/detail/: transform_fun.hpp
lib/math/tests/: CMakeLists.txt
lib/morton/tests/: CMakeLists.txt  morton2_test.cpp
lib/plan/tests/: CMakeLists.txt  plan_test.cpp
lib/time/: CMakeLists.txt
lib/time/include/ufo/time/: timing.hpp
lib/time/src/: timing.cpp
lib/time/tests/: CMakeLists.txt
lib/utility/: CMakeLists.txt
lib/utility/tests/: CMakeLists.txt
lib/vision/include/ufo/vision/: camera.hpp
lib/vision/tests/: CMakeLists.txt
lib/viz/: CMakeLists.txt
lib/viz/apps/ufoviz/src/: ufoviz.cpp
lib/viz/glfw_webgpu/: CMakeLists.txt
lib/viz/glfw_webgpu/src/: glfw_surface.c
lib/viz/include/ufo/viz/: renderable.hpp  viz.hpp
lib/viz/include/ufo/viz/renderable/: map.hpp  path.hpp
lib/viz/shaders/: map_ray_trace_3d.wgsl
lib/viz/src/: viz.cpp
lib/viz/tests/: CMakeLists.txt  map_test.cpp  path_test.cpp  viz_test.cpp
tests/: CMakeLists.txt
