# add_executable(Tests)
# target_link_libraries(Tests PRIVATE Catch2::Catch2WithMain)

# target_compile_options(Tests
# 	PUBLIC
# 		-Wall
# 		-Werror
# 		-Wextra
# 		-pedantic
# 		-Wconversion
# 		-Wcast-align
# 		-Wunused
# 		# -Wshadow
# 		-Wold-style-cast
# 		-Wpointer-arith
# 		-Wcast-qual
# 		-Wno-missing-braces
# )

# include(CTest)
# include(Catch)
# catch_discover_tests(Tests)